--- a/CSC680 Term Project/CSC680 Term Project/Base.lproj/Main.storyboard
+++ b/CSC680 Term Project/CSC680 Term Project/Base.lproj/Main.storyboard
@@ -30,7 +30,82 @@
             </objects>
             <point key="canvasLocation" x="775" y="-48"/>
         </scene>
-        <!--View Task-->
+        <!--Edit Task View Controller-->
+        <scene sceneID="mEO-gf-Vzz">
+            <objects>
+                <viewController id="Gol-U8-YzR" customClass="EditTaskViewController" customModule="CSC680_Term_Project" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4hH-dH-CEM">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edit Task Title:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wCR-AJ-1u8">
+                                <rect key="frame" x="20" y="64" width="374" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edit Task Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zCO-Ha-UQ8">
+                                <rect key="frame" x="20" y="159" width="374" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZqO-Ts-g9P">
+                                <rect key="frame" x="20" y="105" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="szm-Gi-lBs">
+                                <rect key="frame" x="20" y="200" width="374" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="lE3-UU-T0G"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mc0-dW-ru6">
+                                <rect key="frame" x="179" y="348" width="56" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Save"/>
+                                <connections>
+                                    <action selector="editSaveAction:" destination="Gol-U8-YzR" eventType="touchUpInside" id="psm-Zc-iHg"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Cw5-7c-oGh"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="zCO-Ha-UQ8" firstAttribute="leading" secondItem="Cw5-7c-oGh" secondAttribute="leading" constant="20" id="3gv-QS-Qgp"/>
+                            <constraint firstItem="zCO-Ha-UQ8" firstAttribute="top" secondItem="ZqO-Ts-g9P" secondAttribute="bottom" constant="20" id="5xK-8D-8YH"/>
+                            <constraint firstItem="Cw5-7c-oGh" firstAttribute="trailing" secondItem="zCO-Ha-UQ8" secondAttribute="trailing" constant="20" id="63E-L2-20c"/>
+                            <constraint firstItem="ZqO-Ts-g9P" firstAttribute="leading" secondItem="Cw5-7c-oGh" secondAttribute="leading" constant="20" id="R7x-vd-ZeQ"/>
+                            <constraint firstItem="ZqO-Ts-g9P" firstAttribute="top" secondItem="wCR-AJ-1u8" secondAttribute="bottom" constant="20" id="TBH-l7-sE6"/>
+                            <constraint firstItem="szm-Gi-lBs" firstAttribute="centerX" secondItem="Cw5-7c-oGh" secondAttribute="centerX" id="V4v-4e-Vz0"/>
+                            <constraint firstItem="wCR-AJ-1u8" firstAttribute="top" secondItem="Cw5-7c-oGh" secondAttribute="top" constant="20" id="VHf-uH-byd"/>
+                            <constraint firstItem="szm-Gi-lBs" firstAttribute="leading" secondItem="Cw5-7c-oGh" secondAttribute="leading" constant="20" id="Z5Z-T5-jSH"/>
+                            <constraint firstItem="szm-Gi-lBs" firstAttribute="top" secondItem="ZqO-Ts-g9P" secondAttribute="bottom" constant="61" id="Zyk-Mj-oCS"/>
+                            <constraint firstItem="Mc0-dW-ru6" firstAttribute="centerX" secondItem="Cw5-7c-oGh" secondAttribute="centerX" id="c8L-lh-GCn"/>
+                            <constraint firstItem="wCR-AJ-1u8" firstAttribute="leading" secondItem="Cw5-7c-oGh" secondAttribute="leading" constant="20" id="g2w-DY-dlK"/>
+                            <constraint firstItem="Cw5-7c-oGh" firstAttribute="trailing" secondItem="wCR-AJ-1u8" secondAttribute="trailing" constant="20" id="lTJ-0v-U3y"/>
+                            <constraint firstItem="Cw5-7c-oGh" firstAttribute="trailing" secondItem="ZqO-Ts-g9P" secondAttribute="trailing" constant="20" id="odl-Wp-9os"/>
+                            <constraint firstItem="Cw5-7c-oGh" firstAttribute="trailing" secondItem="szm-Gi-lBs" secondAttribute="trailing" constant="20" id="sF4-Zs-WS7"/>
+                            <constraint firstItem="Mc0-dW-ru6" firstAttribute="top" secondItem="szm-Gi-lBs" secondAttribute="bottom" constant="20" id="sWd-Fa-Hv1"/>
+                            <constraint firstItem="szm-Gi-lBs" firstAttribute="centerX" secondItem="Cw5-7c-oGh" secondAttribute="centerX" id="xUH-Cf-vGZ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="U67-l9-BU0"/>
+                    <connections>
+                        <outlet property="editDescTF" destination="szm-Gi-lBs" id="lmu-OL-mvs"/>
+                        <outlet property="editTitleTF" destination="ZqO-Ts-g9P" id="vFr-kT-WzX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eJz-Ec-n3O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-17.39130434782609" y="632.8125"/>
+        </scene>
+        <!--Title-->
         <scene sceneID="Z5d-dQ-gfL">
             <objects>
                 <viewController storyboardIdentifier="SeeTaskViewController" id="Mlm-Oa-1q8" customClass="SeeTaskViewController" customModule="CSC680_Term_Project" customModuleProvider="target" sceneMemberID="viewController">
@@ -53,18 +128,44 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Kb-CQ-HHb">
+                                <rect key="frame" x="16" y="325.5" width="382" height="200"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b8F-qD-Clj">
+                                        <rect key="frame" x="100" y="0.0" width="182" height="200"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Edit"/>
+                                        <connections>
+                                            <segue destination="Gol-U8-YzR" kind="show" id="ph5-TH-F2d"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="b8F-qD-Clj" firstAttribute="leading" secondItem="9Kb-CQ-HHb" secondAttribute="leading" constant="100" id="Kmv-0g-KNf"/>
+                                    <constraint firstAttribute="height" constant="200" id="VQM-d7-38n"/>
+                                    <constraint firstAttribute="trailing" secondItem="b8F-qD-Clj" secondAttribute="trailing" constant="100" id="ao1-ve-K7t"/>
+                                    <constraint firstItem="b8F-qD-Clj" firstAttribute="top" secondItem="9Kb-CQ-HHb" secondAttribute="top" id="qgo-IG-hlo"/>
+                                    <constraint firstAttribute="bottom" secondItem="b8F-qD-Clj" secondAttribute="bottom" id="wwF-rk-MPX"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="3aB-WM-AOF"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="3aB-WM-AOF" firstAttribute="trailing" secondItem="JPO-39-5el" secondAttribute="trailing" constant="20" id="7OH-yb-QHF"/>
                             <constraint firstItem="JPO-39-5el" firstAttribute="leading" secondItem="3aB-WM-AOF" secondAttribute="leading" constant="20" id="8eQ-TE-FQn"/>
+                            <constraint firstItem="3aB-WM-AOF" firstAttribute="trailing" secondItem="9Kb-CQ-HHb" secondAttribute="trailing" constant="16" id="MeE-RR-sXj"/>
+                            <constraint firstItem="9Kb-CQ-HHb" firstAttribute="leading" secondItem="3aB-WM-AOF" secondAttribute="leading" constant="16" id="PVW-h5-wzt"/>
+                            <constraint firstItem="3aB-WM-AOF" firstAttribute="trailing" secondItem="9Kb-CQ-HHb" secondAttribute="trailing" constant="16" id="SEM-l1-5A6"/>
+                            <constraint firstItem="9Kb-CQ-HHb" firstAttribute="leading" secondItem="3aB-WM-AOF" secondAttribute="leading" constant="16" id="Tyz-JM-8Ps"/>
                             <constraint firstItem="JPO-39-5el" firstAttribute="top" secondItem="3aB-WM-AOF" secondAttribute="top" constant="20" id="ZcV-n7-3g4"/>
                             <constraint firstItem="UZz-NQ-I9K" firstAttribute="leading" secondItem="3aB-WM-AOF" secondAttribute="leading" constant="20" id="bDa-OV-xps"/>
+                            <constraint firstItem="9Kb-CQ-HHb" firstAttribute="top" secondItem="UZz-NQ-I9K" secondAttribute="bottom" constant="200" id="dCM-vC-kDH"/>
                             <constraint firstItem="UZz-NQ-I9K" firstAttribute="top" secondItem="JPO-39-5el" secondAttribute="bottom" constant="20" id="nLn-XJ-bpB"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="View Task" id="yIu-gP-49t"/>
+                    <navigationItem key="navigationItem" title="Title" id="S36-of-xde"/>
                     <connections>
                         <outlet property="desc1TF" destination="UZz-NQ-I9K" id="EoW-Rw-YCG"/>
                         <outlet property="title1TF" destination="JPO-39-5el" id="RZr-dE-rQp"/>
